infra/k8s/apps/driver-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
  namespace: driver-service
  labels:
    app: driver-service
    version: "1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
        version: "1.0.0"
    spec:
      serviceAccountName: driver-service-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: driver-service
          image: 969283154407.dkr.ecr.us-east-2.amazonaws.com/driver-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          securityContext:
            runAsUser: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: tmp
          emptyDir: {}
