infra/k8s/apps/driver-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-service
  namespace: driver-service
  labels:
    app: driver-service
spec:
  selector:
    app: driver-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
